Improved histogram and statistics stuff.